# book-catalogue

./: .gitignore  EXERCISE.md  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: lint.yml
